tests/ui/infinite/infinite-instantiation.stderr
error: reached the recursion limit while instantiating `function::<Option<Option<Option<Option<...>>>>>`
  --> $DIR/infinite-instantiation.rs:22:9
   |
LL |         function(counter - 1, t.to_option());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `function` defined here
  --> $DIR/infinite-instantiation.rs:20:1
   |
LL | fn function<T:ToOpt + Clone>(counter: usize, t: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/infinite-instantiation.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

